--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Data Siswa</title>
         <link href="/lib/css/material-icons.css" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="/lib/css/materialize.css"  media="screen,projection"/>
+        <link rel="icon" href="/lib/images/h.jpg">
         <style type="text/css">
         .crud-cont{
             margin: 50px auto 40px;
