--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,9 @@ and open the template in the editor.
             <nav class="blue-grey darken-3">
               <div class="nav-wrapper container">
                 <a href="#" class="brand-logo light">Data Siswa</a>
+                
               </div>
+                <a href="/logout" class="btn right-aligned" style="position: fixed;">LOGOUT</a>
             </nav>
         </div>
         <div ng-view="" class="crud-cont">
